--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,11 @@
     "require-dev": {
         "phpmailer/phpmailer": "^6.0"
     },
+    "autoload": {
+        "psr-4": {
+            "Elminson\\EmailTopFtp\\": "src/"
+        }
+    },
     "license": "MIT",
     "authors": [
         {
