--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "project",
     "require": {
         "phpmailer/phpmailer": "^6.0",
-        "ssilence/php-imap-client": "dev-master",
+        "ssilence/php-imap-client": "2.0.x-dev",
         "nicolab/php-ftp-client": "^1.4"
     },
     "require-dev": {
