update composer.json with minimum-stability and prefer-stable

--- a/composer.json
+++ b/composer.json
@@ -19,5 +19,6 @@
             "email": "edeoleo@gmail.com"
         }
     ],
-    "minimum-stability": "alpha"
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
