--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,6 @@
             "email": "edeoleo@gmail.com"
         }
     ],
-    "minimum-stability": "dev",
+    "minimum-stability": "dev-master",
     "prefer-stable": true
 }
