--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "require": {
         "phpmailer/phpmailer": "^6.0",
         "nicolab/php-ftp-client": "^1.4",
-        "ssilence/php-imap-client" : "dev-master"
+        "ssilence/php-imap-client" : "^2.0"
     },
     "autoload": {
         "psr-4": {
