--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "elminson/emailtoftp",
     "description": "Email to FPT",
     "type": "project",
+    "minimum-stability": "RC",
     "require": {
         "phpmailer/phpmailer": "^6.0",
         "nicolab/php-ftp-client": "^1.4",
